--- a/frontend/service_info.html
+++ b/frontend/service_info.html
@@ -7,7 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/navbar.css">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
 </head>
@@ -51,7 +52,7 @@
             <tr><i class="fa fa-phone" aria-hidden="true"> N.V.T</i></tr>
             <tr></tr>
             <tr>
-                <td> <i class="fa fa-envelope" aria-hidden="true"></i>   service@gmail.com</td>
+                <td> <i class="fa fa-envelope" aria-hidden="true"></i> service@gmail.com</td>
             </tr>
             <tr></tr>
             <tr>
@@ -59,8 +60,31 @@
             </tr>
         </table>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <br>
+    <hr>
+    <div id="review_header">
+        <h4>Reviews</h4>
+    </div>
+    <div class="review">
+        <table>
+            <tr>
+                <td>niet vriendelijk</td>
+            </tr>
+            
+            <tr>
+                <td>te duur</td>
+            </tr>
+            <tr>
+                <td>houdt niet aan afspraken</td>
+            </tr>
+        </table>
+    </div>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+</script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+</script>
 </body>
 
 </html>
