--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,144 +5,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../css/homepage.css">
-    <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/login.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
 </head>
 
 <body class="body">
-    <div id="navbar">
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link active link-text" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link link-text" href="company.html">Comapnies</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link link-text" href="jobs.html">Jobs</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link link-text" href="service.html">service</a>
-            </li>
-        </ul>
+    <div class="illustration">
+        <img src="../images/signup_illustration.png" alt="">
     </div>
-
-    <div class="job">
-        <img src="../images/service.jpeg">
-        <h2>Find a service</h2>
-        <p>
-            Find the best avaiable <br> service  there is on the <br>market
-        </p>
-    </div>
-
-    <div class="seeking">
-        <img src="../images/job.jpeg" alt="">
-        <h2>Find jobs</h2>
-        <p>See which company is hiring </p>
-    </div>
-
-    <div class="bussines">
-        <h4>New Bussiness</h4>
-        <div class="banner">
-            <div class="new1">
-                <div class="card" style="width: 10rem; ">
-                    <img src="../images/external-content.duckduckgo.com.jpeg" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Kirpalani</h5>
-                        <a href="#" class="btn btn-primary txt-center">Go </a>
-                    </div>
+    <div class="login">
+        <div class="col-12">
+            <form method="" action="" autocomplete="on">
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Email address</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
-            </div>
-            <div class="new2">
-                <div class="card" style="width: 10rem; ">
-                    <img src="../images/external-content.duckduckgo.com.jpeg" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Kirpalani</h5>
-                        <a href="#" class="btn btn-primary txt-center">Go </a>
-                    </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Password</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1">
                 </div>
-            </div>
-            <div class="new3">
-                <div class="card" style="width: 10rem; ">
-                    <img src="../images/external-content.duckduckgo.com.jpeg" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Kirpalani</h5>
-                        <a href="#" class="btn btn-primary txt-center">Go </a>
-                    </div>
+                <div class="form-group form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Remember Me</label>
                 </div>
-            </div>
-            <div class="new4">
-                <div class="card" style="width: 10rem; ">
-                    <img src="../images/external-content.duckduckgo.com.jpeg" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Kirpalani</h5>
-                        <a href="#" class="btn btn-primary txt-center">Go </a>
-                    </div>
-                </div>
-            </div>
-            <div class="new5">
-                <div class="card" style="width: 10rem; ">
-                    <img src="../images/external-content.duckduckgo.com.jpeg" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Kirpalani</h5>
-                        <a href="#" class="btn btn-primary txt-center">Go </a>
-                    </div>
-                </div>
-            </div>
+                <a href="#">Forgot password</a><br>
+                <a href="#">Sign Up</a>
+                <br>
+                <br>
+                <button type="submit" class="btn btn-success">Submit</button>
+            </form>
         </div>
-    </div>
 
-    <div class="top_rated">
-        <h4>Top Rated</h4>
-        <div class="banner">
-            <div class="top1">
-                <div class="card" style="width: 10rem; ">
-                    <img src="../images/external-content.duckduckgo.com.jpeg" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Kirpalani</h5>
-                        <a href="#" class="btn btn-primary txt-center">Go </a>
-                    </div>
-                </div>
-            </div>
-            <div class="top2">
-                <div class="card" style="width: 10rem; ">
-                    <img src="../images/external-content.duckduckgo.com.jpeg" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Kirpalani</h5>
-                        <a href="#" class="btn btn-primary txt-center">Go </a>
-                    </div>
-                </div>
-            </div>
-            <div class="top3">
-                <div class="card" style="width: 10rem; ">
-                    <img src="../images/external-content.duckduckgo.com.jpeg" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Kirpalani</h5>
-                        <a href="#" class="btn btn-primary txt-center">Go </a>
-                    </div>
-                </div>
-            </div>
-            <div class="top4">
-                <div class="card" style="width: 10rem; ">
-                    <img src="../images/external-content.duckduckgo.com.jpeg" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Kirpalani</h5>
-                        <a href="#" class="btn btn-primary txt-center">Go </a>
-                    </div>
-                </div>
-            </div>
-            <div class="top5">
-                <div class="card" style="width: 10rem; ">
-                    <img src="../images/external-content.duckduckgo.com.jpeg" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Kirpalani</h5>
-                        <a href="#" class="btn btn-primary txt-center">Go </a>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 </body>
 
